--- a/numpy1.ipynb
+++ b/numpy1.ipynb
@@ -534,75 +534,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "ca3ae9ca",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lista = range(100)\n",
+    "arr11 = np.arange(100)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "44a6479a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "a2cb9b67",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2800\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sys.getsizeof(87)*len(lista))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "f1c7f442",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "800\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr11.itemsize*arr11.size)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "13ec70a2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76bb6e83",
+   "metadata": {},
+   "source": [
+    "# faster "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "8c8d2bd6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1966030597686768\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = range(10000000)\n",
+    "y = range(10000000, 20000000)\n",
+    "start_time = time.time()\n",
+    "c = [(x,y) for x,y in zip(x,y)]\n",
+    "print(time.time() - start_time)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "8015551e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.022809505462646484\n"
+     ]
+    }
+   ],
+   "source": [
+    "a =np. arange(10000000)\n",
+    "b =np. arange(10000000, 20000000)\n",
+    "start_time = time.time()\n",
+    "d = a + b\n",
+    "print(time.time() - start_time)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0392d67a",
+   "metadata": {},
+   "source": [
+    "# Indexing Slicing Iteration"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "3bfd60a5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11],\n",
+       "       [12, 13, 14, 15],\n",
+       "       [16, 17, 18, 19],\n",
+       "       [20, 21, 22, 23]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr12 = np.arange(24).reshape(6,4)\n",
+    "arr12"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "99426fae",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  6, 10, 14, 18, 22])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr12[:, 2]"
+   ]
   },
   {
    "cell_type": "code",
