--- a/numpy1.ipynb
+++ b/numpy1.ipynb
@@ -709,42 +709,354 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "6a41320a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2],\n",
+       "       [ 5,  6],\n",
+       "       [ 9, 10],\n",
+       "       [13, 14],\n",
+       "       [17, 18],\n",
+       "       [21, 22]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr12[:, 1:3]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "7c46411e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 9, 10],\n",
+       "       [13, 14]])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr12[2:4, 1:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd06daeb",
+   "metadata": {},
+   "source": [
+    "# Numpy operation"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "54312891",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0a4ef6b5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "arr1 = np.array([1,2,3,4,5,6])\n",
+    "arr2 = np.array([4,5,6,7,8,9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "84ae1e0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-3, -3, -3, -3, -3, -3])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1 - arr2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e488943b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4, 10, 18, 28, 40, 54])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1 * arr2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e31c9192",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  4,  6,  8, 10, 12])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1 * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8be7eee2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False,  True,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2 > 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4ce96aeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr3 = np.arange(6).reshape(2,3)\n",
+    "arr4 = np.arange(6,12).reshape(3,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7afb8937",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 28,  31],\n",
+       "       [100, 112]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr3.dot(arr4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "55cb2f37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 2, 5, 6],\n",
+       "       [5, 6, 8, 5],\n",
+       "       [6, 3, 6, 9],\n",
+       "       [9, 5, 2, 5]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr5 = np.array([[4,2,5,6],[5,6,8,5],[6,3,6,9],[9,5,2,5]])\n",
+    "arr5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3f86c5a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 2, 5, 6],\n",
+       "       [5, 6, 8, 5],\n",
+       "       [6, 3, 6, 9],\n",
+       "       [9, 5, 2, 5]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a1892b78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(9)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr5.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "4721cb9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 2, 2, 5])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr5.min(axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f0988494",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(51)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr4.sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25dfe424",
+   "metadata": {},
+   "source": [
+    "# Basic Operation\n",
+    "1. A-b\n",
+    "2. b*2\n",
+    "3. a<35\n",
+    "4. A*B(Element-Wise mul)\n",
+    "5. A.dot(B)\n",
+    "6. A*=B\n",
+    "# Unary Operations\n",
+    "1. A.min()/A.min()\n",
+    "2. A.sum(axis=0)    //column wise\n",
+    "3. A.max(axis=1)     //row wise\n",
+    "# Universal Functions\n",
+    "1. np.exp(B)\n",
+    "2. np.sqrt()\n",
+    "3. np.sin(A)\n",
+    "# Converting type\n",
+    "1. A.astype('float')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84ae1e0d",
+   "id": "c74bb98f",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77de7a04",
+   "metadata": {},
+   "source": [
+    "# Reshaping Numpy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f98d4338",
+   "metadata": {},
    "source": []
   }
  ],
