--- a/numpy1.ipynb
+++ b/numpy1.ipynb
@@ -760,7 +760,24 @@
    "id": "fd06daeb",
    "metadata": {},
    "source": [
-    "# Numpy operation"
+    "# Numpy operation\n",
+    "# Basic Operation\n",
+    "1. A-b\n",
+    "2. b*2\n",
+    "3. a<35\n",
+    "4. A*B(Element-Wise mul)\n",
+    "5. A.dot(B)\n",
+    "6. A*=B\n",
+    "# Converting type\n",
+    "1. A.astype('float')\n",
+    "# Unary Operations\n",
+    "1. A.min()/A.min()\n",
+    "2. A.sum(axis=0)    //column wise\n",
+    "3. A.max(axis=1)     //row wise\n",
+    "# Universal Functions\n",
+    "1. np.exp(B)\n",
+    "2. np.sqrt()\n",
+    "3. np.sin(A)\n"
    ]
   },
   {
@@ -1014,30 +1031,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "25dfe424",
-   "metadata": {},
-   "source": [
-    "# Basic Operation\n",
-    "1. A-b\n",
-    "2. b*2\n",
-    "3. a<35\n",
-    "4. A*B(Element-Wise mul)\n",
-    "5. A.dot(B)\n",
-    "6. A*=B\n",
-    "# Unary Operations\n",
-    "1. A.min()/A.min()\n",
-    "2. A.sum(axis=0)    //column wise\n",
-    "3. A.max(axis=1)     //row wise\n",
-    "# Universal Functions\n",
-    "1. np.exp(B)\n",
-    "2. np.sqrt()\n",
-    "3. np.sin(A)\n",
-    "# Converting type\n",
-    "1. A.astype('float')"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c74bb98f",
@@ -1050,13 +1043,181 @@
    "id": "77de7a04",
    "metadata": {},
    "source": [
-    "# Reshaping Numpy"
+    "# Reshaping Numpy\n",
+    "1. Ravel\n",
+    "2. Reshape\n",
+    "3. Transpose\n",
+    "4. Stacking\n",
+    "5. Splitting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "0091cff3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 2, 5, 6, 5, 6, 8, 5, 6, 3, 6, 9, 9, 5, 2, 5])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr5.ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b578a908",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 6,  8, 10],\n",
+       "       [ 7,  9, 11]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr4.transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "92b2c78e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr6 = np.arange(5, 20).reshape(3,5)\n",
+    "arr7 = np.arange(7, 22).reshape(3,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "f19f6271",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 5,  6,  7,  8,  9,  7,  8,  9, 10, 11],\n",
+       "       [10, 11, 12, 13, 14, 12, 13, 14, 15, 16],\n",
+       "       [15, 16, 17, 18, 19, 17, 18, 19, 20, 21]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hstack((arr6, arr7))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "a2a17b31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 5,  6,  7,  8,  9],\n",
+       "       [10, 11, 12, 13, 14],\n",
+       "       [15, 16, 17, 18, 19],\n",
+       "       [ 7,  8,  9, 10, 11],\n",
+       "       [12, 13, 14, 15, 16],\n",
+       "       [17, 18, 19, 20, 21]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.vstack((arr6, arr7))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f98d4338",
+   "id": "c1bfbfc9",
    "metadata": {},
+   "source": [
+    "# Fancy indexing in numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "a2784f9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11],\n",
+       "       [12, 13, 14, 15],\n",
+       "       [16, 17, 18, 19],\n",
+       "       [20, 21, 22, 23]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr8 = np.arange(24).reshape(6,4)\n",
+    "arr8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f7ba473c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 8,  9, 10, 11],\n",
+       "       [16, 17, 18, 19]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr8[[0,2,4]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f02a813",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
