Indexing with Boolean arrays

--- a/numpy1.ipynb
+++ b/numpy1.ipynb
@@ -1213,9 +1213,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ef9f019",
+   "metadata": {},
+   "source": [
+    "# Indexing with Boolean arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "1f02a813",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[78, 50, 88, 87, 61],\n",
+       "       [90, 97, 18, 75, 59],\n",
+       "       [66, 14,  8, 41, 50],\n",
+       "       [60, 12, 74, 30, 43]], dtype=int32)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr9 = np.random.randint(low=1, high=100, size=20).reshape(4,5)\n",
+    "arr9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "0aec70a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([78, 88, 87, 61, 90, 97, 75, 59, 66, 60, 74], dtype=int32)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr9[arr9>50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "f4e32b35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([87, 61, 97, 75, 59], dtype=int32)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr9[(arr9>50) & (arr9%2!=0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "d6d71f02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[78, 50, 88,  0,  0],\n",
+       "       [90,  0, 18,  0,  0],\n",
+       "       [66, 14,  8, 41, 50],\n",
+       "       [60, 12, 74, 30, 43]], dtype=int32)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr9[(arr9>50) & (arr9%2!=0)]=0\n",
+    "arr9"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f02a813",
+   "id": "9b915073",
    "metadata": {},
    "outputs": [],
    "source": []
