--- a/numpy1.ipynb
+++ b/numpy1.ipynb
@@ -238,12 +238,12 @@
    "metadata": {},
    "source": [
     "## properties & Attributes\n",
-    "# 1.Shape\n",
-    "# 2.nDim\n",
-    "# 3.size\n",
-    "# 4.Itemsize\n",
-    "# 5.Dtype\n",
-    "# 6.astype()"
+    "1. Shape\n",
+    "2. nDim\n",
+    "3. size\n",
+    "4. Itemsize\n",
+    "5. Dtype\n",
+    "6. astype()"
    ]
   },
   {
@@ -1470,13 +1470,152 @@
    "id": "ea20acbd",
    "metadata": {},
    "source": [
-    "# Rules of Broadcasting"
+    "# Rules of Broadcasting\n",
+    "## Broadcasting\n",
+    "<p>The term broadcasting refers to the ability of NumPy to treat arrays of different shapes during arithmetic operations. Arithmetic operations on arrays are usually done on corresponding elements. If two arrays are of exactly the same shape, then these operations are smoothly performed.<br>\n",
+    "If the dimensions of two arrays are dissimilar, element-to-element operations are not possible. However, operations on arrays of non-similar shapes is still possible in NumPy, because of the broadcasting capability. The smaller array is broadcast to the size of the larger array so that they have compatible shapes.</p>\n",
+    "\n",
+    "- np.arange(3) + 5                               = (1,3) \n",
+    "- np.ones((3,3)) + np.arange(3)                  = (3,3)\n",
+    "- np.arange(3).reshape((3,1)) + np.arange(3)     = (3,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "4e1f6c65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "25adb139",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3]\n",
+      " [4 5 6 7]]\n",
+      "[[ 8  9 10 11]\n",
+      " [12 13 14 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1 = np.arange(8).reshape(2,4)\n",
+    "a2 = np.arange(8, 16).reshape(2,4)\n",
+    "print(a1)\n",
+    "print(a2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a2b53a3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 8, 10, 12, 14],\n",
+       "       [16, 18, 20, 22]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a1 + a2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5b7f5133",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2]\n",
+      " [3 4 5]\n",
+      " [6 7 8]] [[0 1 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a3 = np.arange(9).reshape(3,3)\n",
+    "a4 = np.arange(3).reshape(1,3)\n",
+    "print(a3,a4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "62c4e05a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  2,  4],\n",
+       "       [ 3,  5,  7],\n",
+       "       [ 6,  8, 10]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a3 + a4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad8f45f5",
+   "metadata": {},
+   "source": [
+    "# important numpy functions\n",
+    "## random\n",
+    "- <b style=\"color:green;\"><i>random()</i></b> // generate random value\n",
+    "- <b style=\"color:green;\"><i>seed(x)</i></b> // fixed random value\n",
+    "- <b style=\"color:green;\"><i>uniform(x1, x2)</i></b> // generate random value between range\n",
+    "- <b style=\"color:green;\"><i>uniform(x1, x2, x3)</i></b> // generate <b style=\"color:green;\">x3</b> times random value between range\n",
+    "- <b style=\"color:green;\"><i>randint(x1, x2)</i></b> // generate random integer value between two number\n",
+    "- <b style=\"color:green;\"><i>randint(x1, x2, x3)</i></b> // generate <b style=\"color:green;\">x3</b> times random integer value between range\n",
+    "## Operational function\n",
+    "- <b style=\"color:green;\"><i>np.max(array)</i></b> // give max value from array\n",
+    "- <b style=\"color:green;\"><i>np.min(array)</i></b> // give min value from array\n",
+    "- <b style=\"color:green;\"><i>np.argmax(array)</i></b> // give max value index\n",
+    "- <b style=\"color:green;\"><i>np.argmin(array)</i></b> // give min value index\n",
+    "- <b style=\"color:green;\"><i>array[condition] = value</i></b> // replase array value to value by condition (change the main array also)\n",
+    "- <b style=\"color:green;\"><i>np.where(condition, true, false) </i></b> // If condition is true, replace with true value otherwise false value (no change in main array)\n",
+    "- <b style=\"color:green;\"><i>np.percentile(array,value)</i></b> // <b style=\"color:green;\">value</b> percent of data relay on <b style=\"color:green;\">result</b> range\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e1f6c65",
+   "id": "dc1ccffd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d28b688",
    "metadata": {},
    "outputs": [],
    "source": []
