--- a/numpy1.ipynb
+++ b/numpy1.ipynb
@@ -1619,6 +1619,99 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "868f7ea7",
+   "metadata": {},
+   "source": [
+    "# Fancy Indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "448360a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[15, 42, 50, 99],\n",
+       "       [77, 95, 16, 20],\n",
+       "       [83, 59, 66,  5],\n",
+       "       [54, 89, 50, 59],\n",
+       "       [64, 74, 35,  2],\n",
+       "       [75, 99, 71, 41]], dtype=int32)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.random.randint(1,100, 24).reshape(6,4)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3623bddc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[83, 59, 66,  5],\n",
+       "       [75, 99, 71, 41],\n",
+       "       [64, 74, 35,  2]], dtype=int32)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[[2,5,4]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bad9e1ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[15, 50, 99],\n",
+       "       [77, 16, 20],\n",
+       "       [83, 66,  5],\n",
+       "       [54, 50, 59],\n",
+       "       [64, 35,  2],\n",
+       "       [75, 71, 41]], dtype=int32)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[:, [0,2,3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95f74eb6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
